# pytree

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
docs/: release.md
homebrew-pytree/: README.md
homebrew-pytree/Formula/: pytree.rb
scripts/: update-homebrew-formula.sh
src/: cli.rs  ignore.rs  main.rs  render.rs  tree.rs
tests/: cli.rs
