[package]
name = "pytree"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
description = "Clean tree view for Python projects"
repository = "https://github.com/0x12th/pytree"
homepage = "https://github.com/0x12th/pytree"
readme = "README.md"
keywords = ["python", "tree", "cli", "filesystem", "gitignore"]
categories = ["command-line-utilities", "development-tools"]
exclude = ["/.github", "/homebrew-pytree", "/scripts"]

[dependencies]
anstyle = "1.0"
clap = { version = "4.5", features = ["derive"] }
ignore = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
